--- a/styles/style.css
+++ b/styles/style.css
@@ -3,11 +3,18 @@ body {
   color: rgb(232, 229, 229);
   font-family: "Courier New", Courier, monospace;
 }
+nav {
+  margin: 20px;
+}
 a {
   text-decoration: none;
   color: inherit;
   margin-right: 10px;
   margin-left: 10px;
+}
+header {
+  margin: 20px;
+  margin-top: 40px;
 }
 .left {
   display: inline-block;
@@ -22,6 +29,7 @@ a {
 }
 .about {
   margin: auto;
+  margin-left: 20px;
   width: 90%;
 }
 
@@ -30,4 +38,14 @@ img {
   margin-left: auto;
   margin-right: auto;
   width: 60%;
+}
+.skills {
+  margin-left: 20px;
+}
+.icon {
+  display: inline-block;
+  width: 30px;
+  height: 30px;
+  margin-left: 20px;
+  margin-right: 20px;
 }
