--- a/styles/style.css
+++ b/styles/style.css
@@ -4,7 +4,7 @@ body {
   font-family: "Courier New", Courier, monospace;
 }
 nav {
-  margin: 20px;
+  margin: 10px;
 }
 a {
   text-decoration: none;
@@ -37,7 +37,7 @@ img {
   display: block;
   margin-left: auto;
   margin-right: auto;
-  width: 60%;
+  width: 70%;
 }
 .skills {
   margin-left: 20px;
@@ -48,4 +48,22 @@ img {
   height: 30px;
   margin-left: 20px;
   margin-right: 20px;
+}
+
+footer {
+  text-align: center;
+  margin: 20px;
+}
+
+ul {
+  padding: 20px;
+  margin: 20px;
+  list-style-type: none;
+  background-color: rgba(12, 125, 239, 0.1);
+}
+li {
+  padding: 30px;
+  margin: 15px;
+  font-size: large;
+  background-color: rgba(216, 221, 225, 0.3);
 }
